load configs immediately